⚡️ Nova Implementação 24/03/2026 20:22